# gn-build

./: qt_bin_tool.gni  qt_bin_tool.py  qt_generator.gni  qt_moc_generator.py
module/qt/: BUILD.gn
toolchain/win/: BUILD.gn
